--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			id="player-life" class="game-body__header__left">
 			<div class="hp"></div>
 			</div>
-			<div class="game-body__header__center">
-
+			<div id="timer" class="game-body__header__center">
+				
 			</div>
 			<div 
 			id="enemy-life"
@@ -23,6 +23,8 @@
 			<div class="hp"></div>
 
 			</div>
+		</div>
+		<div id="notification">
 		</div>
 		<canvas id="game"></canvas>
 	</div>
