add sprites run jump fall functional

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="game.css">
+	<link rel="stylesheet" href="css/game.css">
 	<title>Fighting game</title>
 </head>
 <body>
@@ -28,6 +28,9 @@
 		</div>
 		<canvas id="game"></canvas>
 	</div>
+	<script src="js/settings.js"></script>
+	<script src="js/utils.js"></script>
+	<script src="js/classes.js"></script>
 	<script src="index.js"></script>
 	
 </body>
